--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div class="logo-container">
                     <img src="./images/userAsset/icons8-d-100.png" class="logo">
                     <div class="logo-text">ebarun Pal</div>
+                    <!-- this is my logo -->
                 </div>
                 
                 <div class="nav-items">
