blog app is added in my portfolio

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                             <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                         </div>
 
-                        <h2 class="project-heading">Tint & Orange</h2>
+                        <h2 class="project-heading">Blog App</h2>
 
-                        <p class="project-subHeading">tedgedg
+                        <p class="project-subHeading">create and explore exciting and interesting blogs here
                         </p>
                         <div class="btn-grp">
-                            <button class="btn-pink btn-project">Read More</button>
-                            <a href="https://github.com/paldebarun/buy-and-sell-shop-server">
+                            <a href="https://blogapp2-igp6.vercel.app/" target="main"><button class="btn-pink btn-project">Take a look</button></a>
+                            <a href="https://github.com/paldebarun/blogapp2.git">
                             <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                             </a>
                             
