the images of project one are modified

--- a/index.html
+++ b/index.html
@@ -91,15 +91,13 @@
                     <div class="project-content project-content-left">
 
                         <div class="project-skills-container">
-                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
-                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
-                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                          <img class="project-skill" src="./images/stack/React.png" alt="" />
                             <img class="project-skill" src="./images/stack/Express.png" alt="" />
-                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
+                           
                             <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
                             <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
                             <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
-                            <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
+                           
                             <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                         </div>
 
