the second project is added

--- a/index.html
+++ b/index.html
@@ -127,13 +127,16 @@
                       <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
                       <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                     </div>
-                    <h2 class="project-heading">Breaking Copyrights</h2>
+                    <h2 class="project-heading">Ecomzy</h2>
                     <p class="project-sub-heading">
-                      A platform to download copyrights free youtube music
+                      Search explore and buy products of your choice
                     </p>
                     <div class="btn-group">
-                      <button class="btn-pink btn-project">Read More</button>
-                      <a href="https://github.com/paldebarun/Auth-app">
+                      <a target="main" href="https://ecomzyui.vercel.app/home" >
+                        <button class="btn-pink btn-project">Take a look</button>
+                      </a>
+                      
+                      <a href="https://github.com/paldebarun/ecomzyui.git">
                         <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                       </a>
                      
