the third project is also added

--- a/index.html
+++ b/index.html
@@ -156,13 +156,15 @@
                       <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                     </div>
           
-                    <h2 class="project-heading">Isha Tattva</h2>
+                    <h2 class="project-heading">devbhumi ratan </h2>
                     <p class="project-sub-heading">
-                      A Website for interior designer to showcase her works and samples
+                      A Website for ayurvedic products
                     </p>
                     <div class="btn-group">
-                      <button class="btn-pink btn-project">Read More</button>
-                      <a href="">
+                      <a target="main" href="https://devbhumi-ratan-herbal.vercel.app/" >
+                        <button class="btn-pink btn-project">Take a look</button>
+                      </a>
+                      <a href="https://github.com/paldebarun/devbhumi-ratan-herbal">
                         <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                       </a>
                       
